--- a/.vsts-ci-pr.yml
+++ b/.vsts-ci-pr.yml
@@ -39,11 +39,16 @@ stages:
       signinRedirectRoot: s141d01-signin-int.azurewebsites.net
       eapimRootUrl: dev-api-customerengagement.platform.education.gov.uk
 
-  - template: yaml/steps/enable-mock-policies.yml
-    parameters:
-      eapimServiceConnection: $(eapimServiceConnection)
-      eapimResourceGroupName: c106d01-eapim-custeng
-      eapimServiceName: c106d01-apim-custeng
+  - job: devEapimOperationSetup
+    displayName: EAPIM Operation Setup
+    pool:
+      vmImage: windows-latest
+    steps:
+    - template: yaml/steps/enable-mock-policies.yml
+      parameters:
+        eapimServiceConnection: $(eapimServiceConnection)
+        eapimResourceGroupName: c106d01-eapim-custeng
+        eapimServiceName: c106d01-apim-custeng
 
 - stage: build
   displayName: Build and Test
@@ -63,57 +68,13 @@ stages:
       signinRedirectRoot: s141d01-signin-int.azurewebsites.net
       eapimRootUrl: dev-api-customerengagement.platform.education.gov.uk
 
-  - template: yaml/steps/clear-mock-policies.yml
-    parameters:
-      eapimServiceConnection: $(eapimServiceConnection)
-      eapimResourceGroupName: c106d01-eapim-custeng
-      eapimServiceName: c106d01-apim-custeng
-
-# - stage: deployDev
-#   displayName: Deploy - DEV
-#   dependsOn:
-#   - build
-#   - devTenantSetup
-#   jobs:
-#   - template: yaml/jobs/deploy.yml
-#     parameters:
-#       variableGroupName: ncs-b2c-dev
-#       applicationName: $(applicationName)
-#       environmentName: 'dev'
-#       functionServicePlanSkuName: $(functionServicePlanSkuName)
-#       functionServicePlanSkuTier: $(functionServicePlanSkuTier)
-#       functionServicePlanSkuCount: $(functionServicePlanSkuCount)
-#       b2cSignUpPolicy: $(b2cSignUpPolicy)
-#       b2cSignupConfirmPolicy: $(b2cSignupConfirmPolicy)
-#       b2cPasswordResetConfirmPoicy: $(b2cPasswordResetConfirmPoicy)
-#       b2cChangeEmailPolicy: $(b2cChangeEmailPolicy)
-#       b2cAuthorizationUrl: $(b2cAuthorizationUrl)
-#       ncsApimSubscriptionKey: $(ncsApimSubscriptionKey)
-#       ncsDssApiRoot: $(devNcsDssApiRoot)
-#       ncsDssApiKey: $(ncsDevDssApiKey)
-#       ncsDssSearchApiVersion: $(ncsDssSearchApiVersion)
-#       ncsDssSearchApiUrlRoute: $(ncsDssSearchApiUrlRoute)
-#       ncsDssCreateCustomerApiUrlRoute: $(ncsDssCreateCustomerApiUrlRoute)
-#       ncsDssCreateContactApiUrlRoute: $(ncsDssCreateContactApiUrlRoute)
-#       ncsDssCreateIdentityApiUrlRoute: $(ncsDssCreateIdentityApiUrlRoute)
-#       ncsDssGetCustomerUrlRoute: $(ncsDssGetCustomerUrlRoute)
-#       ncsDigitalIdentityRoute: $(ncsDigitalIdentityRoute)
-#       environmentId: 'd01'
-#       serviceConnection: $(devServiceConnection)
-#       subscriptionId: $(devSubscriptionId)
-#       relyingPartyAppClientId: $(devRelyAppClientId)
-#       clientSigningKey: $(devClientSigningKey)
-#       graphAccessClientId: $(devGraphAccessClientId)
-#       graphAccessClientSecret: $(devGraphAccessClientSecret)
-#       deploymentPrimaryLocation: $(deploymentPrimaryLocation)
-#       policyCertThumbprint: $(devB2cApimCertThumbprint)
-#       extensionAppId: $(parsedDevExtensionAppId)
-#       notifyAidedSignupEmailTemplateId: $(devNotifyAidedSignupEmailTemplateId)
-#       notifySelfSignupEmailTemplateId: $(devNotifySelfSignupEmailTemplateId)
-#       notifyPasswordResetConfirmationEmailTemplateId: $(devNotifyPasswordResetConfirmationEmailTemplateId)
-#       notifyEmailChangeConfirmationEmailNewEmailTemplateId: $(devNotifyEmailChangeConfirmationEmailNewEmailTemplateId)
-#       notifyEmailChangeConfirmationEmailOldEmailTemplateId: $(devNotifyEmailChangeConfirmationEmailOldEmailTemplateId)
-#       eapimServiceConnection: $(eapimServiceConnection)
-#       eapimEnvironmentName: 'Development'
-#       eapimResourceGroupName: c106d01-eapim-custeng
-#       eapimServiceName: c106d01-apim-custeng
+  - job: devEapimOperationSetup
+    displayName: EAPIM Operation Setup
+    pool:
+      vmImage: windows-latest
+    steps:
+    - template: yaml/steps/clear-mock-policies.yml
+      parameters:
+        eapimServiceConnection: $(eapimServiceConnection)
+        eapimResourceGroupName: c106d01-eapim-custeng
+        eapimServiceName: c106d01-apim-custeng
