--- a/yaml/jobs/tenant-mocked-setup-grouped.yml
+++ b/yaml/jobs/tenant-mocked-setup-grouped.yml
@@ -11,7 +11,7 @@ parameters:
   type: string
 
 jobs:
-- job: tenantSetup
+- job: tenantMockSetup
   displayName: B2C Tenant Mock Setup 
   pool:
     vmImage: windows-latest
