--- a/yaml/jobs/tenant-mocked-setup-grouped.yml
+++ b/yaml/jobs/tenant-mocked-setup-grouped.yml
@@ -51,67 +51,67 @@ jobs:
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\TrustFrameworkBase_Invitation_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         $policyId = "B2C_1A_TrustFrameworkExtensions_Invitation_Mock"
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\TrustFrameworkExtensions_Invitation_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         $policyId = "B2C_1A_Account_Signup_Mock"
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Account_Signup_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         $policyId = "B2C_1A_Change_Email_Mock"
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Change_Email_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         $policyId = "B2C_1A_Find_Email_Mock"
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Find_Email_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         $policyId = "B2C_1A_Resend_Email_Mock"
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Resend_Email_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         $policyId = "B2C_1A_Password_Reset_Confirmation_Mock"
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Password_Reset_Confirmation_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         $policyId = "B2C_1A_Password_Reset_Mock"
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Password_Reset_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         $policyId = "B2C_1A_Signin_Invitation_Mock"
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Signin_Invitation_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         $policyId = "B2C_1A_Signup_Confirmation_Mock"
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Signup_Confirmation_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         $policyId = "B2C_1A_Signup_Invitation_Mock"
         $policyFile = "$($env:BUILD_SOURCESDIRECTORY)\policy\mocks\Signup_Invitation_Mock.xml"
         Write-Host policyId : $policyId
         Write-Host policyFile : $policyFile
-        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) $($env:UPLOADER_PRINCIPAL_SECRET) $($env:TENANT_ID) $($policyId) $($policyFile)"
+        Invoke-Expression "$($scriptPath) $($env:UPLOADER_PRINCIPAL_CLIENTID) '$($env:UPLOADER_PRINCIPAL_SECRET)' $($env:TENANT_ID) $($policyId) $($policyFile)"
 
         Write-Host 'Mock Policy Upload Complete'
       env:
