--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -166,7 +166,7 @@ jobs:
       -B2CPasswordResetConfirmPolicy "${{parameters.b2cPasswordResetConfirmPoicy}}"
       -B2CChangeEmailPolicy "${{parameters.b2cChangeEmailPolicy}}"
       -RelyingPartyAppClientId "${{parameters.relyingPartyAppClientId}}"
-      -B2CRedirectUri "https://jwt.ms"
+      -B2CRedirectUri "$(b2cRedirectUrl)"
       -B2CAuthorizationUrl "${{parameters.b2cAuthorizationUrl}}"
       -ClientSigningKey "${{parameters.clientSigningKey}}"
       -SMTPServer "$(smtpServer)"
