--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -211,7 +211,7 @@ jobs:
             subscriptionId: ${{parameters.subscriptionId}}
             resourceGroupName: s141${{parameters.environmentId}}-${{parameters.environmentName}}${{parameters.applicationName}}
             location: ${{parameters.deploymentPrimaryLocation}}
-            templateFilePath: '$(Build.SourcesDirectory)\arm\template-copy.json'
+            templateFilePath: '$(Build.SourcesDirectory)\deployment\template.json'
             armParameterOverrideString: $(overrideParameters)
 
         - pwsh: |
