--- a/yaml/jobs/deploy-grouped.yml
+++ b/yaml/jobs/deploy-grouped.yml
@@ -181,7 +181,7 @@ jobs:
             armParameterOverrideString: $(overrideParameters)
 
         - pwsh: |
-            Write-Host "##vso[task.setvariable variable=dsiB2cFunctionKey]$($env:ARMOUTPUT_FUNCTIONDEFAULTKEY)"
+            Write-Host "##vso[task.setvariable variable=dsiB2cFunctionKey]$($env:ARMOUTPUTS_ARMOUTPUT_FUNCTIONDEFAULTKEY)"
           displayName: Set Named values
 
         - task: Tokenization@2
@@ -208,7 +208,7 @@ jobs:
             environmentName: ${{parameters.environmentName}}
 
         - pwsh : |
-            $url = "$($env:ARMOUTPUT_FUNCTIONURL)/swagger"
+            $url = "$($env:ARMOUTPUTS_ARMOUTPUT_FUNCTIONURL)/swagger"
             $filePath = "$($env:BUILD_SOURCESDIRECTORY)\definition.json"
             Write-Host "url: $($url)"
             Write-Host "filePath: $($filePath)"
@@ -220,9 +220,9 @@ jobs:
           parameters:
             serviceConnection: ${{parameters.serviceConnection}}
             eapimServiceConnection: ${{parameters.eapimServiceConnection}}
-            functionName: $(armOutput.functionName)
-            functionKey: $(armOutput.functionMasterKey)
-            functionUrl: $(armOutput.functionUrl)
+            functionName: $(armOutputs.armOutput.functionName)
+            functionKey: $(armOutputs.armOutput.functionMasterKey)
+            functionUrl: $(armOutputs.armOutput.functionUrl)
             productName: 'NCS Identity'
             productRequiresSubscription: true
             publishContactEmail: 'paul.sheridan@digital.education.gov.uk'
