Fix pp custom domain

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -223,4 +223,4 @@ stages:
       eapimEnvironmentName: 'Oat'
       eapimResourceGroupName: c106t02-eapim-custeng
       eapimServiceName: c106t02-apim-custeng
-      b2cCustomDomain: test-login.ncs.signin.education.gov.uk
+      b2cCustomDomain: pp-login.ncs.signin.education.gov.uk
