--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -223,3 +223,4 @@ stages:
       eapimEnvironmentName: 'Oat'
       eapimResourceGroupName: c106t02-eapim-custeng
       eapimServiceName: c106t02-apim-custeng
+      b2cCustomDomain: pp-login.ncs.signin.education.gov.uk
