--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -147,7 +147,7 @@ parameters:
 
 jobs:
 - deployment: Deploy
-  displayName: Deploy Azure Function
+  displayName: Deploy Function and Front Door
   environment: ${{parameters.environmentName}}
   pool:
     vmImage: windows-latest
