--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -204,7 +204,7 @@ jobs:
       -NotifyEmailChangeConfirmationEmailNewEmailTemplateId "${{parameters.notifyEmailChangeConfirmationEmailNewEmailTemplateId}}"
       -NotifyEmailChangeConfirmationEmailOldEmailTemplateId "${{parameters.notifyEmailChangeConfirmationEmailOldEmailTemplateId}}"
       -TncFileName "${{parameters.tncFileName}}"
-      -B2CCustomDomain "${{parameters.b2cCustomDomain}}"'
+      -B2CCustomDomain "$(b2cCustomDomain)"'
 
   strategy:
     runOnce:
